force-app/main/default/objects/BDD_Reporting__c/BDD_Reporting__c.object-meta.xml
<CustomObject>
    <description>BDD Reporting for Compliance Controls &amp; Signoffs</description>
    <label>BDD Reporting</label>
    <nameField>
        <displayFormat>BD-{000000}</displayFormat>
        <label>BDD Reporting ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BDD Reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>