force-app/main/default/objects/BDD_Reporting__c/fields/Account_Business_Division__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Division__c</fullName>
    <label>Account Business Division</label>
    <length>80</length>
    <type>Text</type>
</CustomField>