force-app/main/default/objects/BDD_Reporting__c/fields/Account_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Entity_Type__c</fullName>
    <label>Account Entity Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>