force-app/main/default/objects/BDD_Reporting__c/fields/Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity__c</fullName>
    <label>Business Entity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>