force-app/main/default/objects/BDD_Reporting__c/fields/CP_Type__c.field-meta.xml
<CustomField>
    <fullName>CP_Type__c</fullName>
    <label>CP Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>