force-app/main/default/objects/BDD_Reporting__c/fields/Customer_Nature_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Customer_Nature_Of_Business__c</fullName>
    <label>Customer Nature Of Business</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>