force-app/main/default/objects/BDD_Reporting__c/fields/Customer_Policy_Approved_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Customer_Policy_Approved_Risk_Level__c</fullName>
    <label>Customer Policy Approved Risk Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>