force-app/main/default/objects/BDD_Reporting__c/fields/Customer_Rationale_for_Onboard__c.field-meta.xml
<CustomField>
    <fullName>Customer_Rationale_for_Onboard__c</fullName>
    <label>Customer Rationale for Onboard</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>