force-app/main/default/objects/BDD_Reporting__c/fields/DEX_Contract_Commitment_for_Latest_Trade__c.field-meta.xml
<CustomField>
    <fullName>DEX_Contract_Commitment_for_Latest_Trade__c</fullName>
    <label>DEX Contract Commitment for Latest Trade</label>
    <length>80</length>
    <type>Text</type>
</CustomField>