force-app/main/default/objects/BDD_Reporting__c/fields/DEX_Products_or_Crude__c.field-meta.xml
<CustomField>
    <fullName>DEX_Products_or_Crude__c</fullName>
    <label>DEX Products or Crude</label>
    <length>80</length>
    <type>Text</type>
</CustomField>