force-app/main/default/objects/BDD_Reporting__c/fields/DEX_Supply_Only__c.field-meta.xml
<CustomField>
    <fullName>DEX_Supply_Only__c</fullName>
    <label>DEX Supply Only</label>
    <length>80</length>
    <type>Text</type>
</CustomField>