force-app/main/default/objects/BDD_Reporting__c/fields/Financial_Data_Volume__c.field-meta.xml
<CustomField>
    <fullName>Financial_Data_Volume__c</fullName>
    <label>Financial Data Volume</label>
    <length>80</length>
    <type>Text</type>
</CustomField>