force-app/main/default/objects/BDD_Reporting__c/fields/GT_Counterparty_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>GT_Counterparty_Legal_Name__c</fullName>
    <label>GT Counterparty Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>