force-app/main/default/objects/BDD_Reporting__c/fields/GT_CP_Status__c.field-meta.xml
<CustomField>
    <fullName>GT_CP_Status__c</fullName>
    <label>GT CP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>