force-app/main/default/objects/BDD_Reporting__c/fields/GT_Due_Diligence_Level__c.field-meta.xml
<CustomField>
    <fullName>GT_Due_Diligence_Level__c</fullName>
    <label>GT Due Diligence Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>