force-app/main/default/objects/BDD_Reporting__c/fields/GT_ID__c.field-meta.xml
<CustomField>
    <fullName>GT_ID__c</fullName>
    <label>GT ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>