force-app/main/default/objects/BDD_Reporting__c/fields/GT_Latest_Approved_Date_DD_MM_YYYY__c.field-meta.xml
<CustomField>
    <fullName>GT_Latest_Approved_Date_DD_MM_YYYY__c</fullName>
    <label>GT Latest Approved Date DD_MM_YYYY</label>
    <type>Date</type>
</CustomField>