force-app/main/default/objects/BDD_Reporting__c/fields/GT_Latest_Approved_Date_GT_12_Months__c.field-meta.xml
<CustomField>
    <fullName>GT_Latest_Approved_Date_GT_12_Months__c</fullName>
    <formula>if (GT_Latest_Approved_Date_DD_MM_YYYY__c &lt;= Today() - 365, True, False)</formula>
    <label>GT Latest Approved Date GT 12 Months</label>
    <type>Checkbox</type>
</CustomField>