force-app/main/default/objects/BDD_Reporting__c/fields/Intended_Business_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Intended_Business_Relationship__c</fullName>
    <label>Intended Business Relationship</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>