force-app/main/default/objects/BDD_Reporting__c/fields/Latest_Trade_Date_DD_MM_YYYY__c.field-meta.xml
<CustomField>
    <fullName>Latest_Trade_Date_DD_MM_YYYY__c</fullName>
    <label>Latest Trade Date DD_MM_YYYY</label>
    <type>Date</type>
</CustomField>