force-app/main/default/objects/BDD_Reporting__c/fields/Latest_Trade_Trader_Name__c.field-meta.xml
<CustomField>
    <fullName>Latest_Trade_Trader_Name__c</fullName>
    <label>Latest Trade Trader Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>