force-app/main/default/objects/BDD_Reporting__c/fields/Not_Qualified_for_BDD__c.field-meta.xml
<CustomField>
    <fullName>Not_Qualified_for_BDD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Qualified for BDD</label>
    <type>Checkbox</type>
</CustomField>