force-app/main/default/objects/BDD_Reporting__c/fields/Review_Commentary_2020__c.field-meta.xml
<CustomField>
    <fullName>Review_Commentary_2020__c</fullName>
    <label>Review Commentary 2020</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>