force-app/main/default/objects/BDD_Reporting__c/fields/Review_Commentary_2021__c.field-meta.xml
<CustomField>
    <fullName>Review_Commentary_2021__c</fullName>
    <label>Review Commentary 2021</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>