force-app/main/default/objects/BDD_Reporting__c/fields/Review_Commentary_2022__c.field-meta.xml
<CustomField>
    <fullName>Review_Commentary_2022__c</fullName>
    <label>Review Commentary 2022</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>