force-app/main/default/objects/BDD_Reporting__c/fields/Reviewed_2022__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_2022__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed 2022</label>
    <type>Checkbox</type>
</CustomField>