force-app/main/default/objects/BDD_Reporting__c/fields/Reviewed_Date_DD_MM_YYYY_2022__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Date_DD_MM_YYYY_2022__c</fullName>
    <label>Reviewed Date DD_MM_YYYY 2022</label>
    <type>Date</type>
</CustomField>