force-app/main/default/objects/BDD_Reporting__c/fields/Reviewed_User_Last_First_MI_2020__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_User_Last_First_MI_2020__c</fullName>
    <inlineHelpText>Reviewed User (Last, First MI)</inlineHelpText>
    <label>Reviewed User (Last, First MI) 2020</label>
    <length>80</length>
    <type>Text</type>
</CustomField>