force-app/main/default/objects/BDD_Reporting__c/fields/Reviewed_User_Last_First_MI_2022__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_User_Last_First_MI_2022__c</fullName>
    <label>Reviewed User (Last, First MI) 2022</label>
    <length>80</length>
    <type>Text</type>
</CustomField>