force-app/main/default/objects/BDD_Reporting__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <label>Reviewer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>