force-app/main/default/objects/BDD_Reporting__c/fields/System_Counterparty_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Counterparty_Name__c</fullName>
    <label>System Counterparty Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>