force-app/main/default/objects/BDD_Reporting__c/fields/System_Deactivation_Indicator__c.field-meta.xml
<CustomField>
    <fullName>System_Deactivation_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Deactivation Indicator</label>
    <type>Checkbox</type>
</CustomField>