force-app/main/default/objects/BDD_Reporting__c/fields/System_E_Rated__c.field-meta.xml
<CustomField>
    <fullName>System_E_Rated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System E-Rated</label>
    <type>Checkbox</type>
</CustomField>