force-app/main/default/objects/BDD_Reporting__c/fields/System_Group__c.field-meta.xml
<CustomField>
    <fullName>System_Group__c</fullName>
    <label>System Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALIGNE</fullName>
            </value>
            <value>
                <fullName>DEX</fullName>
            </value>
            <value>
                <fullName>ECAP</fullName>
            </value>
            <value>
                <fullName>ECS</fullName>
            </value>
            <value>
                <fullName>ENDNA_5</fullName>
            </value>
            <value>
                <fullName>ENDNA_CRUDE</fullName>
            </value>
            <value>
                <fullName>ENDNA_GP</fullName>
            </value>
            <value>
                <fullName>ENDNA_PROD</fullName>
            </value>
            <value>
                <fullName>GMAS</fullName>
            </value>
            <value>
                <fullName>GSAP</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>IMOS</fullName>
            </value>
            <value>
                <fullName>IO</fullName>
            </value>
            <value>
                <fullName>NUCLEUS</fullName>
            </value>
            <value>
                <fullName>RADAR</fullName>
            </value>
            <value>
                <fullName>SAPMAG</fullName>
            </value>
            <value>
                <fullName>SLMT</fullName>
            </value>
            <value>
                <fullName>STNSAP</fullName>
            </value>
            <value>
                <fullName>TSAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>