force-app/main/default/objects/BDD_Reporting__c/fields/Trading_Desk__c.field-meta.xml
<CustomField>
    <fullName>Trading_Desk__c</fullName>
    <label>Trading Desk</label>
    <length>80</length>
    <type>Text</type>
</CustomField>