force-app/main/default/objects/BDD_Reporting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GT_Counterparty_Legal_Name__c</columns>
    <columns>GT_Due_Diligence_Level_Approved__c</columns>
    <columns>System_Group__c</columns>
    <columns>Reviewer__c</columns>
    <columns>System_ID__c</columns>
    <columns>Reviewed_2020__c</columns>
    <columns>Not_Qualified_for_BDD__c</columns>
    <columns>CP_Type__c</columns>
    <columns>Intended_Business_Relationship__c</columns>
    <columns>Customer_Nature_Of_Business__c</columns>
    <columns>Customer_Rationale_for_Onboard__c</columns>
    <columns>Latest_Trade_Date_DD_MM_YYYY__c</columns>
    <columns>Review_Commentary_2020__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>