force-app/main/default/objects/BDD_Reporting__c/listViews/BDD_All_List.listView-meta.xml
<ListView>
    <fullName>BDD_All_List</fullName>
    <columns>NAME</columns>
    <columns>GT_Counterparty_Legal_Name__c</columns>
    <columns>GT_Latest_Approved_Date_DD_MM_YYYY__c</columns>
    <columns>System_Group__c</columns>
    <columns>System_ID__c</columns>
    <columns>CP_Type__c</columns>
    <columns>Intended_Business_Relationship__c</columns>
    <columns>Customer_Nature_Of_Business__c</columns>
    <columns>Customer_Rationale_for_Onboard__c</columns>
    <columns>Latest_Trade_Date_DD_MM_YYYY__c</columns>
    <columns>Reviewed_2020__c</columns>
    <columns>Reviewed_Date_DD_MM_YYYY_2020__c</columns>
    <columns>Reviewed_User_Last_First_MI_2020__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>System_Deactivation_Indicator__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>GT_Latest_Approved_Date_GT_12_Months__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>BDD Reporting List - ALL</label>
</ListView>